; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/rme9652/extr_hdsp.c_hdsp_da_gain.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/rme9652/extr_hdsp.c_hdsp_da_gain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdsp = type { i32 }

@HDSP_DAGainMask = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hdsp*)* @hdsp_da_gain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hdsp_da_gain(%struct.hdsp* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.hdsp*, align 8
  store %struct.hdsp* %0, %struct.hdsp** %3, align 8
  %4 = load %struct.hdsp*, %struct.hdsp** %3, align 8
  %5 = getelementptr inbounds %struct.hdsp, %struct.hdsp* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @HDSP_DAGainMask, align 4
  %8 = and i32 %6, %7
  switch i32 %8, label %12 [
    i32 130, label %9
    i32 128, label %10
    i32 129, label %11
  ]

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %13

10:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %13

11:                                               ; preds = %1
  store i32 2, i32* %2, align 4
  br label %13

12:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %13

13:                                               ; preds = %12, %11, %10, %9
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
